# docs/docs/openapi.yaml
@@ -52,141 +52,11 @@ components:
           format: uri
           type: string
       type: object
-    JWKS:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          example: https://example.com/schemas/JWKS.json
-          format: uri
-          readOnly: true
-          type: string
-        keys:
-          items:
-            additionalProperties: {}
-            type: object
-          nullable: true
-          type: array
-      required:
-        - keys
-      type: object
-    ProviderMetadata:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          example: https://example.com/schemas/ProviderMetadata.json
-          format: uri
-          readOnly: true
-          type: string
-        authorization_endpoint:
-          type: string
-        claims_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        code_challenge_methods_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        grant_types_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        id_token_signing_alg_values_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        issuer:
-          type: string
-        jwks_uri:
-          type: string
-        response_types_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        scopes_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        subject_types_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        token_endpoint:
-          type: string
-        token_endpoint_auth_methods_supported:
-          items:
-            type: string
-          nullable: true
-          type: array
-        userinfo_endpoint:
-          type: string
-      required:
-        - issuer
-        - authorization_endpoint
-        - token_endpoint
-        - jwks_uri
-        - userinfo_endpoint
-        - scopes_supported
-        - response_types_supported
-        - grant_types_supported
-        - subject_types_supported
-        - id_token_signing_alg_values_supported
-        - token_endpoint_auth_methods_supported
-        - claims_supported
-        - code_challenge_methods_supported
-      type: object
 info:
   title: go-oidc-mock
   version: dev
 openapi: 3.0.3
 paths:
-  /.well-known/openid-configuration:
-    get:
-      operationId: openid-configuration
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ProviderMetadata"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get OpenID provider configuration
-      tags:
-        - OIDC
-  /jwks.json:
-    get:
-      operationId: jwks
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/JWKS"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get JSON Web Key Set
-      tags:
-        - OIDC
   /oauth2/authorize:
     get:
       operationId: authorize
